--- a/style/main-style.css
+++ b/style/main-style.css
@@ -10,7 +10,8 @@
   background-attachment: fixed;
   background-position: center 0px;
   height: 600px;
-  background-image:url(https://demo.mintplugins.com/church-plant/wp-content/uploads/sites/17/2016/05/church-plant_home-2.jpg);
+  background-image:url(https://demo.mintplugins.com/church-plant/wp-content/
+    uploads/sites/17/2016/05/church-plant_home-2.jpg);
 }
 
 .header.container
