--- a/style/main-style.css
+++ b/style/main-style.css
@@ -1,3 +1,8 @@
+body, h1, h2, h3, h4, h5, h6, li, a, textarea, p, span, dl, dt, dd, td, th, button, strong, label, input 
+{
+    font-family: dashicons,IcoMoon,'Jeju Gothic',sans-serif !important;
+}
+
 #main-page
 {
   width: 100%;
@@ -32,4 +37,79 @@
 .nav-primary
 {
   float: right;
+}
+
+.page-title-bar
+{
+    /*background-image: url(//youngnakchurch.org/wp-content/uploads/2017/06/title_bg_04.jpg);*/
+    background-color: #F6F6F6;
+    height: 87px;
+    -webkit-background-size: auto;
+    -moz-background-size: auto;
+    -ms-background-size: auto;
+    -o-background-size: auto;
+}
+
+.page-title-bar h1
+{
+      font-weight: 400;
+    line-height: 1.45;
+    letter-spacing: -0px;
+        color: #333333;
+
+}
+
+.page-title-bar h3 {
+    font-size: 12px;
+    line-height: calc(12px + 12px);
+}
+
+.page-title-bar-left
+{
+      border-color: #cdeeff;
+
+}
+
+.page-title-captions {
+    display: table-cell;
+    vertical-align: middle;
+    width: 45%;
+}
+
+.page-title-row
+{
+
+}
+
+/* 
+  핸드폰 UI
+*/
+
+
+/* 
+  테블릿 UI
+*/
+@media screen and (min-width:768px)
+{
+  .navbar-nav > li {
+    float: left;
+  }
+}
+
+/* 
+  테블릿 UI
+*/
+@media screen and (min-width:992px)
+{
+  .desktop-menu {
+    display: block;
+  }
+}
+
+/* 
+  컴퓨터 UI
+*/
+@media screen and (min-width:1200px)
+{
+
 }
